--- a/Assignment 4/Graph Coloring/Propositional Logic.tex
+++ b/Assignment 4/Graph Coloring/Propositional Logic.tex
@@ -141,4 +141,18 @@ Answer:
 \end{table}
 
 
+\section{Graph Coloring Problem}
+
+Question 1: Explain how you can express this problem with propositional logic. What are the relations and how do you translate them?
+
+Answer:
+In the graph coloring problem, there are two constraints:
+\begin{enumerate}
+    \item 
+
+\end{enumerate}
+Question 2: Translate your model into Conjunctive Normal Form (CNF) and write it in your report.
+Answer:
+
+
 \end{document}
